@@ -151,13 +151,13 @@ Iagno:
 
 Mahjongg:
         - Finish off scaling support. Make new themes.
-          - Make the geometry generation occur before the configure
-            callback so that it is a) quicker b) adapts to the
-            change in the tile layout and c) makes sure the tile layout
-            is in fact auto-apply.
+          - Why do some top-row tiles on the hard level disappear when
+            I click them when the game is first launched, but not after
+            "new game" is selected ?
           - Rebuild seta.png
           - Fix up the tile search function for speed.
-          - Make resizing a bit snappier.
+          - Make resizing a bit snappier (check the graphics scaling code, I
+            think this is the bottleneck).
           - Finish the SVG tileset.
         - Fix shuffling bugs (91098, 94750), probably using the new
           generation algorithm, it should only require a few tweaks to
