@@ -3,7 +3,7 @@
  * Copyright (C) 2003 by Callum McKenzie
  *
  * Created: <2003-09-07 10:40:24 callum>
- * Time-stamp: <2003-10-02 10:29:23 callum>
+ * Time-stamp: <2003-10-03 08:47:27 callum>
  *
  */
 
@@ -15,6 +15,8 @@ gboolean load_images (gchar * file);
 void set_background (gchar * colour);
 void draw_tile (gint tileno);
 void draw_all_tiles (void);
+void calculate_view_geometry (void);
+void configure_pixmaps (void);
 
 extern GdkColor bgcolour;
 
